# readex-atp

./: CMakeLists.txt  Doxyfile.in  README.md  atpenv.sh
include/: ATP_registry_protocol.h  atpcommon.h  atpconfig.h.in  atpdesc.h  atplib.h  atplib.inc  atpquery.h  atpreport.h  atpserver.h
src/atplib/: atplib.c  atplibF.c
src/atpserver/: atpquery.c  atpserver.c  main.c
src/atpserver/lua/: constraint_parser.lua  gen_file.lua  lua_codex.lua  oc  oc_query.lua  parse_oc_code.lua
src/common/: atpcommon.c  atpdesc.c  atpreport.c  json.c
test/: atplib_test.c  atpserver_test.c  test.c
